add login docs
